--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,50 +7,49 @@ publish_to: "none"
 version: 0.0.1+1
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ^3.9.0
 
 dependencies:
-  connectivity_plus: ^6.1.1
+  connectivity_plus: ^7.0.0
   dartz: ^0.10.1
   flutter:
     sdk: flutter
-  flutter_dotenv: ^5.2.1
+  flutter_dotenv: ^6.0.0
   flutter_easyloading: ^3.0.5
   flutter_localizations:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  flutter_native_splash: ^2.4.4
-  flutter_riverpod: ^2.6.1
-  flutter_spinkit: ^5.2.1
-  flutter_svg: ^2.0.16
-  get_it: ^8.0.3
-  go_router: ^14.6.2
-  hive_ce: ^2.8.0+2
-  hive_ce_flutter: ^2.2.0
-  http: ^1.2.2
+  flutter_native_splash: ^2.4.6
+  flutter_riverpod: ^3.0.0
+  flutter_spinkit: ^5.2.2
+  flutter_svg: ^2.2.1
+  get_it: ^8.2.0
+  go_router: ^16.2.2
+  hive_ce: ^2.12.0
+  hive_ce_flutter: ^2.3.2
   image_cropper: ^8.1.0
   image_picker: ^1.1.2
   intl: ^0.20.2
   logger: ^2.5.0
-  package_info_plus: ^8.1.2
-  path: ^1.9.0
+  package_info_plus: ^9.0.0
+  path: ^1.9.1
   path_provider: ^2.1.5
-  permission_handler: ^11.3.1
-  url_launcher: ^6.3.1
-  dio: ^5.8.0+1
-  go_transitions: ^0.8.1
+  permission_handler: ^12.0.1
+  url_launcher: ^6.3.2
+  dio: ^5.9.0
+  go_transitions: ^0.8.2
   shimmer: ^3.0.0
-  fluttertoast: ^8.2.12
-  lottie: ^3.3.1
+  fluttertoast: ^9.0.0
+  lottie: ^3.3.2
 
 dev_dependencies:
-  build_runner: ^2.5.2
-  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  hive_ce_generator: ^1.8.1
-  rename_app: ^1.6.3 #dart run rename_app:main all="App Name"
+  build_runner: ^2.5.4
+  flutter_lints: ^6.0.0
+  hive_ce_generator: ^1.9.2
+  rename_app: ^1.6.5 #dart run rename_app:main all="App Name"
   change_app_package_name: ^1.5.0 #dart run change_app_package_name:main com.new.package.name
 
 flutter_native_splash:
