--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,8 @@ dependencies:
   go_router: ^16.2.2
   hive_ce: ^2.12.0
   hive_ce_flutter: ^2.3.2
-  image_cropper: ^8.1.0
-  image_picker: ^1.1.2
+  image_cropper: ^10.0.0
+  image_picker: ^1.2.0
   intl: ^0.20.2
   logger: ^2.5.0
   package_info_plus: ^9.0.0
@@ -42,6 +42,7 @@ dependencies:
   shimmer: ^3.0.0
   fluttertoast: ^9.0.0
   lottie: ^3.3.2
+  awesome_dio_interceptor: ^1.3.0
 
 dev_dependencies:
   flutter_test:
